# SDDRush

./: LICENSE  README.md  intro.md  intro_ru.md  pyproject.toml  pyrightconfig.json
src/sddrush/: __init__.py  backlog.py  prompts.py  shared.py  status.py
templates/: adapt_prompt.md  agent_template.md  architect_delta_template.md  architect_template.md  coding_rules_template.md  research_closeout_template.md  research_probe_template.md  research_run_manifest_template.md  research_template.md  research_template_ui.md  research_template_ui_filled.md  researches_index_template.md  solution_ideation_template.md  task_solver_template.md  ticket_template.md
tests/: test_cli_flow.py
