[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sddrush"
version = "0.2.0"
description = "Agent-first Spec-Driven Development toolkit for 2026 workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

